styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: Verdana, Tahoma, sans-serif;
  background: #000;
}

nav {
  height: 70px;
  width: 100%;
  text-align: center;
  /* position: fixed; */
  top: 0;
  /* background: #000; */
  z-index: 1;
}

.bgColor {
  background-color: #000;
}

nav ul {
  text-align: center;
}

nav ul li {
  display: inline-block;
  line-height: 70px;
  margin: 0 20px;
}

nav ul li a {
  color: white;
  letter-spacing: 1px;
  font-size: 16px;
  text-transform: uppercase;
  padding: 5px 5px;
  font-family: "Raleway", sans-serif;
  font-weight: bold;
  text-decoration: none;
}

nav ul li a:hover {
  color: #6b8e4e;
  transition: 0.5s;
}

.checkbtn {
  font-size: 25px;
  color: #b2c5b2;
  cursor: pointer;
  line-height: 65px;
  display: none;
}

#check {
  display: none;
}

.socials {
  display: none;
}

header {
  height: 100vh;
  background-color: #000;
}

.header-text {
  /* padding-top: 150px; */
  padding-left: 0px;
  width: fit-content;
  text-align: center;
  margin: 0px auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.header-text p span {
  color: #6b8e4e;
}

/* header h3 {
  color: white;
  text-align: left;
  font-family: "Qwitcher Grypen", cursive;
  font-size: 30px;
} */

header h1 {
  font-size: 45px;
  letter-spacing: normal;
  color: white;
  font-family: "Poppins", sans-serif;
  font-weight: 700;
}

header p {
  font-size: 22px;
  color: rgb(233, 233, 233, 0.8);
  font-family: "Poppins", sans-serif;
  font-weight: 500;
}

.dot {
  font-size: 60px;
  color: #6b8e4e;
}

/* .header-text p{
    padding: 12px 14px;
    margin: 15px 0px;
    border
    color: white;
    width: 145px;
    background: #6B8E4E;
    display: inline-block;
    font-size: 20px;
    font-family: 'poppins', sans-serif;
} */

.header-text i {
  color: #fff;
  font-size: 20px;
  padding: 12px 13px;
  margin: 15px 10px 15px 0px;
  border-radius: 50%;
  background: rgba(255, 255, 255, 0.1);
}

.header-text i:hover {
  color: #6b8e4e;
  transition: 0.5s;
}

.header-text .fa-facebook-f {
  padding: 12px 16px;
}

.fa-linkedin-in {
  --animate-duration: 2s;
}

.fa-twitter {
  --animate-duration: 1.5s;
}

.fa-instagram {
  --animate-duration: 1s;
}

.fa-facebook {
  --animate-duration: 0.5s;
}

#arrow {
  font-size: 20px;
  color: white;
  position: absolute;
  top: 90%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* text-div */
#text {
  width: 100%;
  height: 100vh;
  background: #6b8e4e;
  display: flex;
  justify-content: center;
  align-items: center;
  /* color: #40532f; */
  padding: 0px 0px 0px 120px;
  text-align: left;
}

#text h1 {
  font-size: 120px;
  color: #395f18;
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  margin: auto;
  line-height: 140px;
  /* text-transform: uppercase; */
}

#text b {
  color: black;
}

/* ABOUT ME */

#About {
  height: fit-content;
  max-width: 100%;
  margin: 150px 8%;
  padding: 0px 0px;
  background: rgb(0, 0, 0, 0.8);
}

#About h1 {
  letter-spacing: 1px;
  padding-top: 30px;
  font-size: 45px;
  font-weight: 600;
  text-align: center;
  color: white;
  font-family: "Poppins", sans-serif;
}

.about-div {
  /* width: 100%; */
  height: fit-content;
  margin: 70px auto;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.about-img-div {
  width: 25%;
  height: 399px;
  margin-right: 30px;
}

#About img {
  /* width: 100%; */
  height: 399px;
  margin: 0px;
  /* box-shadow: 7px 7px #6b8e4e; */
}

.about-note {
  /* background: rgba(255, 255, 255, 0.1); */
  margin: 0px;
  width: 61%;
  height: fit-content;
  text-align: left;
  padding: 0px 25px;
  color: white;
  /* box-shadow: 0 4px 8px 0 rgba(107, 142, 78, 0.2), 0 6px 20px 0 rgba(107, 142, 78, 0.19); */
}

.about-note h3 {
  color: #6b8e4e;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 25px;
  padding-bottom: 7px;
}

.about-note-p {
  font-family: "Quicksand", sans-serif;
  padding-bottom: 40px;
}

.skill-header {
  margin-bottom: 10px;
}

#Skills-div {
  height: 100px;
  position: absolute;
  bottom: 0;
  left: 0;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}

.skills {
  padding: 10px 10px;
  background: rgba(0, 0, 0, 0.5);
  margin: 0px 10px 10px 0px;
  text-align: center;
  display: inline-block;
  font-family: "Quicksand", sans-serif;
  letter-spacing: 0.5px;
}

.arrow-up {
  width: 60px;
  height: 60px;
  background-color: #6b8e4e;
  font-size: 35px;
  padding-top: 3px;
  position: fixed;
  bottom: 30px;
  right: 30px;
  visibility: hidden;
  border: none;
  border-radius: 50%;
}

.arrow-up:active {
  background: #40532f;
}

.arrow-up-appear {
  visibility: visible;
}

.arrow-bg {
  background-color: #000;
  color: #6b8e4e;
}

/* Services */

#Services {
  width: 100%;
  height: fit-content;
  padding: 80px 0px;
  background: rgba(255, 255, 255, 0.06);
}

#Services h1 {
  letter-spacing: 2px;
  padding: 0px 0px;
  font-size: 45px;
  text-align: center;
  color: white;
  font-weight: 600;
  font-family: "Poppins", sans-serif;
}

.service {
  width: 90%;
  margin: auto;
  padding: 80px 0px 30px 0px;
  /* background-color: #000; */
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
}

.box {
  width: 29%;
  height: 335px;
  background-color: #000;
  color: white;
  padding: 0px 20px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: 15px;
}

.box:hover {
  background: rgb(107, 142, 78);
  background: linear-gradient(
    180deg,
    rgba(107, 142, 78, 1) 0%,
    rgba(103, 134, 77, 1) 35%,
    rgba(61, 68, 55, 1) 100%
  );
  transition: linear-gradient 20s;
}

/* .box:hover i {
  background-color: #fff;
  color: #6b8e4e;
} */
/* ... */

